[project]
name = "internet"
version = "0.1.0"
description = "Internet usage accounting system"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "cryptography",
    "dynaconf",
    "httpx",
    "jdatetime",
    "jinja2",
    "prometheus-client",
    "pymysql",
    "rich",
    "sanic[ext]",
    "sqlalchemy",
]

[dependency-groups]
dev = [
    "dill",
    "djlint",
    "pytest",
    "ruff",
    "wrapt",
]

[tool.uv]
required-version = ">=0.5"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["internet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
